--- a/src/index.css
+++ b/src/index.css
@@ -1,67 +1,77 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    padding-right: 0 !important ;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding-right: 0 !important;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.swal2-container {
+  z-index: 1400 !important;
+}
+
 @layer utilities {
-    @variants responsive {
-        .text-shadow {
-          text-shadow: 2px 2px 4px black;
-        }
-        .text-shadow-md {
-          text-shadow: 4px 4px 8px black;
-        }
-        .text-shadow-lg {
-          text-shadow: 15px 15px 30px black;
-        }
-        .text-shadow-none {
-          text-shadow: none;
-        }
-    } 
-    .scroll-none::-webkit-scrollbar {
-      width: 0;
-      height: 0;
+  @variants responsive {
+    .text-shadow {
+      text-shadow: 2px 2px 4px black;
     }
 
-    .scroll-sm::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
+    .text-shadow-md {
+      text-shadow: 4px 4px 8px black;
     }
 
-    .scroll-sm::-webkit-scrollbar-track {
-      background: #d1d5db;
-      border-radius: 20px;
+    .text-shadow-lg {
+      text-shadow: 15px 15px 30px black;
     }
 
-    .scroll-sm::-webkit-scrollbar-thumb {
-      background: #6b7280;
-      border-radius: 20px;
-    }
-
-    body::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
-    }
-  
-    body::-webkit-scrollbar-track {
-      background: #F9FAFB;
-    }
-  
-    body::-webkit-scrollbar-thumb {
-      background: #D1D5DB;
-      border-radius: 20px;
-    }
-  
-    body::-webkit-scrollbar-thumb:hover {
-      background: #9CA3AF;
+    .text-shadow-none {
+      text-shadow: none;
     }
   }
+
+  .scroll-none::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  .scroll-sm::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  .scroll-sm::-webkit-scrollbar-track {
+    background: #d1d5db;
+    border-radius: 20px;
+  }
+
+  .scroll-sm::-webkit-scrollbar-thumb {
+    background: #6b7280;
+    border-radius: 20px;
+  }
+
+  body::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  body::-webkit-scrollbar-track {
+    background: #F9FAFB;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    background: #D1D5DB;
+    border-radius: 20px;
+  }
+
+  body::-webkit-scrollbar-thumb:hover {
+    background: #9CA3AF;
+  }
+}
