--- a/src/index.css
+++ b/src/index.css
@@ -42,9 +42,17 @@ code {
     height: 0;
   }
 
+  .scroll-none {
+    scrollbar-width: none;
+  }
+
   .scroll-sm::-webkit-scrollbar {
     width: 6px;
     height: 6px;
+  }
+
+  .scroll-sm {
+    scrollbar-width: thin;
   }
 
   .scroll-sm::-webkit-scrollbar-track {
